# Aya_bot

./: .gitignore  .pre-commit-config.yaml  Makefile  aya.db  example.db  main.py  pyproject.toml  requirements.txt
adapters/telegram/: dev_runner.py
bot/middlewares/: user_context.py
bot/routers/: basic.py
core/: logging.py  settings.py
dialogue/: addressing.py  cadence.py  critic.py  emotion_tracker.py  extractors.py  fact_extractor.py  flirt.py  greeting.py  guardrails.py  humanizer.py  intents.py  personal_palette.py  planner.py  style_guard.py  summarizer.py  topic_threader.py
domain/memory/: extraction.py  manager.py  models.py
domain/persona/: service.py
domain/policies/: loader.py  models.py
domain/reasoning/: decision_engine.py  intent_classifier.py  models.py
domain/world_state/: service.py
memory/: __init__.py  chat_history.py  episodes.py  facts_repo.py  repo.py
orchestrator/: aya_brain.py  integration_adapter.py  planner.py  weather_gate.py
persona/: loader.py  persona.yml  policy.md  system_prompt.j2
policies/: content_policies.yaml  safety_policies.yaml  style_policies.yaml
services/: deepseek_client.py  world_state.py
storage/: db.py
tests/: conftest.py  test_boot.py  test_events_plan.py  test_flirt_levels.py  test_intent_weather_time.py  test_memory_consistency.py  test_memory_extraction.py  test_memory_recall.py  test_memory_roundtrip.py  test_storage_migrations.py  test_style_rules.py
